welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:20: error: not found: type color
def faireMotif1( c: color) {
                    ^PatternPicture:6: error: not found: type color
def faireMotif1( c: color) {
                    ^PatternPicture:2: error: not found: value color
  faireMotif1 (color.RED)
               ^PatternPicture:3: error: not found: value faireMotif2
  faireMotif2(color.BLUE)
  ^PatternPicture:3: error: not found: value color
  faireMotif2(color.BLUE)
              ^PatternPicture:7: error: not found: value setColourBrosse
  setColourBrosse(c)
  ^