welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
  faireMotif1 (color.RED)
  faireMotif2(color.BLUE)
}

def faireMotif1( c: color) {
  setColourBrosse(c)
  for (cpt1 <- 1 to 2) {

    avance()
  	baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  gauche()
  }
  
}

def faireMotif1( c: color) {
  setCouleurBrosse(c)
  for (cpt <- 1 to 2) {
    avance()
  	baisseBrosse()
  	leveBrosse()
  	avance()
  	gauche()
 	 avance()
		}
  }